商品和商品分类

--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # ================================================= #
 # ************** mysql数据库 配置  ************** #
 # ================================================= #
-# 数据库地址
+# 数据库地址 指定数据库类型
 DATABASE_ENGINE = "django.db.backends.mysql"
 # 数据库地址
 DATABASE_HOST = "127.0.0.1"
@@ -12,7 +12,7 @@ DATABASE_USER = "root"
 # 数据库密码
 DATABASE_PASSWORD = "Sql87654321."
 # 数据库名
-DATABASE_NAME = "pyroDjangoData"
+DATABASE_NAME = "sendcard"
 #数据库编码
 DATABASE_CHARSET = "utf8mb4"
 # 数据库长连接时间（默认为0，单位秒）即每次请求都重新连接,debug模式下该值应该写为0 ，mysql默认长连接超时时间为8小时
@@ -22,7 +22,7 @@ DATABASE_CONN_MAX_AGE = 0
 # ================================================= #
 # ************** redis 配置  ************** #
 # ================================================= #
-REDIS_URL = 'redis://127.0.0.1:6379'
+REDIS_URL = 'redis://:123456@127.0.0.1:6379'
 
 # ================================================= #
 # ************** 服务器基本 配置  ************** #
