--- a/.env.production
+++ b/.env.production
@@ -8,11 +8,11 @@ DATABASE_HOST = "36.133.79.38"
 # 数据库端口
 DATABASE_PORT = 3306
 # 数据库用户名
-DATABASE_USER = "django_admin_mysql"
+DATABASE_USER = "root"
 # 数据库密码
-DATABASE_PASSWORD = "DjangoAdminMysql123"
+DATABASE_PASSWORD = "Sql87654321."
 # 数据库名
-DATABASE_NAME = "django_admin_mysql"
+DATABASE_NAME = "sendcard"
 #数据库编码
 DATABASE_CHARSET = "utf8mb4"
 # 数据库长连接时间（默认为0，单位秒）即每次请求都重新连接,debug模式下该值应该写为0 ，mysql默认长连接超时时间为8小时
